Fix long vulnerability path not wrapping

--- a/app/assets/stylesheets/utilities.scss
+++ b/app/assets/stylesheets/utilities.scss
@@ -116,5 +116,6 @@
 }
 
 .gl-white-space-normal { @include gl-white-space-normal; }
+.gl-word-break-all { @include gl-word-break-all; }
 .gl-line-height-inherit { line-height: inherit; }
 .gl-text-align-inherit { text-align: inherit; }
